feat: add additional check word functionality

--- a/src/sass/layouts/savannah-game/_savannah-constants.scss
+++ b/src/sass/layouts/savannah-game/_savannah-constants.scss
@@ -6,4 +6,13 @@ $dark-main-color: #065747;
 $border-color: #9dc7b3;
 $chosen-color: #9dc7b3;
 $hover-color: #51857c;
-$correct-word-color: #A0C55F;
+$correct-word-color-1: #A0C55F;
+$correct-word-color-2: #c5be5f;
+$correct-word-color-3: #ebdb1a;;
+$correct-word-color-4: #c59e5f;
+$correct-word-color-5: #c5845f;
+$correct-word-color-6: #68c55f;
+$correct-word-color-7: #5fc586;
+$correct-word-color-8: #5fc5b8;
+$correct-word-color-9: #9c5fc5;
+$correct-word-color-10: #c55fb8;
