--- a/src/sass/promo-page.scss
+++ b/src/sass/promo-page.scss
@@ -1,3 +1,9 @@
+.promo-container {
+  width: 100%;
+  min-width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+}
 .speakit-game,
 .english-puzzle-game,
 .savannah-game,
@@ -7,7 +13,10 @@
   position: relative;
   z-index: 1;
 
-  width: 100vw;
+  box-sizing: border-box;
+  width: 100%;
+  padding-bottom: 18vh;
+  overflow: hidden;
   &__image-block {
     height: unset;
     min-height: unset;
@@ -20,12 +29,14 @@
     position: relative;
     z-index: 1;
 
-    margin: 3% auto 0 auto;
+    margin: 12vh auto 0 auto;
 
     text-align: center;
     color: #000000;
   }
   &__content h1 {
+    padding-bottom: 10vh;
+
     font-weight: 700;
     font-size: 4vw;
     font-family: "Balsamiq Sans", cursive;
@@ -33,17 +44,42 @@
     text-transform: uppercase;
   }
   &__content p {
-    width: 30em;
+    width: 80vw;
     margin: 3% auto 0 auto;
 
     font-weight: 700;
-    font-size: 2vw;
+    font-size: 1.2vw;
     line-height: 1.25;
     font-family: "Balsamiq Sans", cursive;
     text-transform: uppercase;
   }
 }
+.header-line {
+  position: absolute;
+  top: -120px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+
+  text-align: center;
+}
+.header-line img {
+  width: 75vw;
+  max-width: 1010px;
+}
+.line {
+  margin-top: 9vh;
+
+  text-align: center;
+}
+.line img {
+  width: 100%;
+  height: 14vh;
+}
 @media only screen and (max-width: 1199px) {
+  .header-line {
+    top: -102px;
+  }
   .speakit-game__content p,
   .english-puzzle-game__content p,
   .savannah-game__content p,
@@ -59,6 +95,24 @@
   .sprint-game__content h1,
   .findWord-game__content h1 {
     font-size: 3em;
+  }
+}
+@media only screen and (max-width: 1035px) {
+  .header-line {
+    top: -81px;
+  }
+}
+@media only screen and (max-width: 810px) {
+  .speakit-game__content h1,
+  .english-puzzle-game__content h1,
+  .savannah-game__content h1,
+  .audiocall-game__content h1,
+  .sprint-game__content h1,
+  .findWord-game__content h1 {
+    font-size: 1.9em;
+  }
+  .header-line {
+    top: -65px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -80,6 +134,35 @@
   .audiocall-game__content h1,
   .sprint-game__content h1,
   .findWord-game__content h1 {
-    font-size: 2em;
+    font-size: 1.4em;
   }
 }
+@media only screen and (max-width: 634px) {
+  .header-line {
+    top: -47px;
+  }
+}
+@media only screen and (min-width: 460px) and (max-width: 482px) {
+  .speakit-game__content h1,
+  .english-puzzle-game__content h1,
+  .savannah-game__content h1,
+  .audiocall-game__content h1,
+  .sprint-game__content h1,
+  .findWord-game__content h1 {
+    font-size: 1.5em;
+  }
+}
+@media only screen and (max-width: 482px) {
+  .header-line {
+    top: -27px;
+  }
+  .speakit-game__content h1,
+  .english-puzzle-game__content h1,
+  .savannah-game__content h1,
+  .audiocall-game__content h1,
+  .sprint-game__content h1,
+  .findWord-game__content h1 {
+    font-size: 1em;
+  }
+}
+
