feat: mute Audio, check word-search hash

--- a/src/sass/layouts/savannah-game/_savannah-constants.scss
+++ b/src/sass/layouts/savannah-game/_savannah-constants.scss
@@ -16,3 +16,4 @@ $correct-word-color-7: #5fc586;
 $correct-word-color-8: #5fc5b8;
 $correct-word-color-9: #9c5fc5;
 $correct-word-color-10: #c55fb8;
+$hint-color: #0ab4f7; 
