--- a/src/sass/layouts/_dictionary-layout.scss
+++ b/src/sass/layouts/_dictionary-layout.scss
@@ -61,7 +61,7 @@
 .dict {
   &__word-line {
     display: flex;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
   }
   &__word-audio {
     width: 2.6rem;
@@ -165,6 +165,20 @@
     text-align: center;
     color: #f56714;
     text-transform: uppercase;
+  }
+  &__optional {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+  &__repeatCounter, &__lastTimeRepeat {
+    color: #2582e7;
+    font-weight: 300;
+    font-size: 1.2rem;
+    margin-left: 3.6rem;
+    & > span {
+      color: #000000;
+    }
   }
 }
 
@@ -355,6 +369,10 @@
   .dictModal__textExampleTranslate {
     margin-left: 2.2rem;
   }
+  .dict__repeatCounter,
+  .dict__lastTimeRepeat {
+    margin-left: 3.2rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -401,5 +419,10 @@
   .dictModal__textMeaningTranslate,
   .dictModal__textExampleTranslate {
     margin-left: 1.8rem;
+  }
+  .dict__repeatCounter,
+  .dict__lastTimeRepeat {
+    font-size: 1rem;
+    margin-left: 2.2rem;
   }
 }
