feat: add disableBtn and activateBtn functions

--- a/src/sass/layouts/savannah-game/_savannah-constants.scss
+++ b/src/sass/layouts/savannah-game/_savannah-constants.scss
@@ -17,3 +17,5 @@ $correct-word-color-8: #5fc5b8;
 $correct-word-color-9: #9c5fc5;
 $correct-word-color-10: #c55fb8;
 $hint-color: #0ab4f7; 
+$disabled-color: rgb(109, 107, 107);
+
