--- a/src/sass/layouts/word-search-game/_main.scss
+++ b/src/sass/layouts/word-search-game/_main.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+
 @include media-mobile {
     margin-top: 0;
   }
@@ -36,5 +37,12 @@
 
 .word-search__statistics {
   width: 80%;
+  max-width: 700px;
+  max-height: 800px;
+
+@include media-mobile {
+    max-height: 450px;
+    width: 90%;
+  }
 }
 
