--- a/src/sass/layouts/word-search-game/_start-page.scss
+++ b/src/sass/layouts/word-search-game/_start-page.scss
@@ -5,7 +5,7 @@
 }
 
 .word-search__description {
-  color: $dark-main-color;
+  color: $text-color;
   text-shadow: 0 1px 0 black;
 
 @include media-tablet {
