--- a/src/sass/abstract/_placeholders.scss
+++ b/src/sass/abstract/_placeholders.scss
@@ -2,6 +2,10 @@
   font-family: "Verdana", "Arial", sans-serif;
 }
 
+%font-title {
+  font-family: "Dancing Script", "Verdana", sans-serif;
+}
+
 %transition {
-  transition: all 0.2s easy-out;
+  transition: all .2s easy-out;
 }
