--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 //  Base
 @import "base/base";
+@import "base/fonts";
 
 //  Components
 @import "components/auth-tool";
@@ -54,4 +55,3 @@
 
 // dictionary
 @import "dictionary";
-
