feat: add off or on speaker

--- a/src/sass/audiocall.scss
+++ b/src/sass/audiocall.scss
@@ -845,7 +845,7 @@ $var9: #00c45f;
 
 @media screen and (max-width: 544px) {
   .container-game__trainings-audiocall__answers {
-    margin-top: -35vh;
+    margin-top: -9em;
   }
   .container-game {
     height: 800px;
