feat: add style for user info

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -19,3 +19,8 @@ $modal-button-hover-background-color: #ffffff;
 //short-stat
 $short-stat-border-color: #80808080;
 $short-stat-error-text: #ff5722;
+
+//user-info
+$user-info-title: #9a0000;
+$user-info-subtitle: #de0000;
+$user-info-value: #519e61;
